deploy/overlays/dev/alpha/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: doro-alpha-gateway
  namespace: doro-alpha
  labels:
    app.kubernetes.io/name: doro-alpha-gateway
    app.kubernetes.io/part-of: doro-erp
spec:
  gatewayClassName: doro-alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: doro-alpha-alb-config
  listeners:
    - name: https
      hostname: origin.doro.minseok.click
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
